<resources>
    <string name="app_name">StarterAplication</string>

    <string name="author_name">Nome do Autor</string>
    <string name="author_age">Idade:</string>
    <string name="age_num">23</string>
    <string name="books_author_quantity">Livros:</string>
    <string name="books_author_quantity_num">50</string>
    <string name="nacionalidade_autor">Brasileiro</string>
    <string name="description_author">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="all_books_author">Livros do autor</string>
    <string name="trending_topics_books">Livros mais lidos</string>

    

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search fragment</string>
    <string name="libary_fragment">libary_fragment</string>
    <string name="home">Home</string>
    <string name="buscar">Buscar</string>
    <string name="minha_biblioteca">Minha biblioteca</string>
    <string name="forward">forward</string>
    <string name="play">play</string>
    <string name="rewind">rewind</string>
    <string name="sample_text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </string>
    <string name="_00_32_03">00:32:03</string>
    <string name="click_me">Click me</string>
    <string name="teste">teste</string>
    <string name="livros_do_autor">Livros do Autor</string>
    <string name="recomendados_para_voc">Recomendados para você</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="image_logo">Image_logo</string>

    <string name="book_title_text">Title Ipsum</string>
    <string name="book_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="book_author_name">Autor:</string>
    <string name="book_genre_name">Gênero:</string>
    <string name="book_duration_name">Duração:</string>
    <string name="book_author_button">Lorem Impsum</string>
    <string name="book_genre_description">Impsum</string>
    <string name="book_duration_num">5:32:00</string>
    <string name="button_ouvir">Ouvir</string>


    <string name="description_library">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</string>
    <string name="mang_s">Mangás</string>
</resources>

